# zulip-eval-bot

./: .gitignore  Dockerfile  README.md  Vagrantfile  zulip-eval-bot.cabal
external-evaluators/: go  go.go  haskell  haskell-type  javascript
src/: Logging.hs  Main.hs
