name: zulip-eval-bot
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: GPL-2
license-file: LICENSE
maintainer: tacla.yamada@gmail.com
author: Pedro Tacla Yamada
 
executable zulip-eval-bot
    build-depends:
        bytestring >=0.10 && <0.11,
        async >=2.0 && <2.1,
        attoparsec >=0.12 && <0.13,
        base >=4 && <5,
        hzulip >=0.5.0.0,
        process >=1.1 && <2
    main-is: Main.hs
    buildable: True
    ghc-options: -threaded
    default-language: Haskell2010
    hs-source-dirs: src
 
 
