name: zulip-eval-bot
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: GPL-2
license-file: LICENSE
maintainer: tacla.yamada@gmail.com
author: Pedro Tacla Yamada

executable zulip-eval-bot
    build-depends: distributed-process >= 0.5.1 && <0.6
                 , distributed-process-platform
                 , network <2.5
                 , base >=4 && <5
                 , hzulip >=1.1.1.0
                 , mtl
                 , transformers
                 , monad-control

                 , network-transport >= 0.4
                 , network-transport-tcp
                 , ansi-terminal >=0.6 && <0.7
                 , bytestring >=0.10 && <0.11
                 , async >=2.0 && <2.1
                 , lifted-async >=0.2 && <0.3
                 , lifted-base >=0.2 && <0.3
                 , attoparsec >=0.12 && <0.13
                 , process >=1.2 && <2
                 , time >=1.4
                 , old-locale >=1
    main-is: Main.hs
    buildable: True
    ghc-options: -threaded
    default-language: Haskell2010
    hs-source-dirs: src
